--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,9 @@
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
+
     http://www.apache.org/licenses/LICENSE-2.0
+
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -27,6 +29,7 @@ Contributors:
 <body>
   <template is="dom-bind">
     <nuxeo-connection url="http://localhost:8080/nuxeo"></nuxeo-connection>
+    <h1>Permissions for /default-domain</h1>
     <nuxeo-document-permissions doc-path="/default-domain"></nuxeo-document-permissions>
   </template>
 </body>
