--- a/nuxeo-document-acl-table.html
+++ b/nuxeo-document-acl-table.html
@@ -112,7 +112,7 @@ Contributors:
   </template>
 
   <nuxeo-operation id="rmPermission" op="Document.RemovePermission" input="{{doc.uid}}"></nuxeo-operation>
-  <nuxeo-operation id="sendNotificationEmailPermissionOp" op="Document.SendNotificationEmailForPermission" input="{{docId}}"></nuxeo-operation>
+  <nuxeo-operation id="sendNotificationEmailPermissionOp" op="Document.SendNotificationEmailForPermission" input="{{doc.uid}}"></nuxeo-operation>
 
   </template>
 </dom-module>
