--- a/nuxeo-popup-permission.html
+++ b/nuxeo-popup-permission.html
@@ -96,7 +96,7 @@ Contributors:
         <!-- Right row -->
         <div layout horizontal>
           <div><span class="required">[[i18n('label.permissions.right', 'Right')]]</span></div>
-          <paper-dropdown-menu>
+          <paper-dropdown-menu no-animations>
             <paper-menu class="dropdown-content" selected="{{params.permission}}" attr-for-selected="permission">
               <template is="dom-repeat" items="[[userVisiblePermissions]]" as="permission">
                 <paper-item permission="[[permission]]">[[i18n(permission, permission)]]</paper-item>
